# pipelinewise-tap-s3-csv

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pylintrc  pyproject.toml  run_integration_tests.py  setup.py  tox.ini
.github/workflows/: ci.yaml
tap_s3_csv/: __init__.py  config.py  discover.py  s3.py  sync.py
tests/integration/: test_s3_connection.py  test_tap_s3_csv.py  utils.py
tests/unit/: test__init.py  test_s3.py
